# bazel_registry

./: .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  pyproject.toml  requirements.in  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: module_release.md
.github/workflows/: check_new_releases.yml  license_check.yml  pr.yml  trigger-bazel-registry-ui.yml
docs/: README.md
modules/dash_license_checker/: metadata.json
modules/dash_license_checker/0.1.0/: MODULE.bazel  source.json
modules/rules_rust/: metadata.json
modules/rules_rust/0.68.1-score/: MODULE.bazel  source.json
modules/score_baselibs/: metadata.json
modules/score_baselibs/0.1.1/: MODULE.bazel  source.json
modules/score_baselibs/0.1.2/: MODULE.bazel  source.json
modules/score_baselibs/0.1.3/: MODULE.bazel  source.json
modules/score_baselibs/0.2.0/: MODULE.bazel  source.json
modules/score_baselibs/0.2.1/: MODULE.bazel  source.json
modules/score_baselibs/0.2.2/: MODULE.bazel  source.json
modules/score_baselibs/0.2.3/: MODULE.bazel  source.json
modules/score_baselibs/0.2.4/: MODULE.bazel  source.json
modules/score_baselibs_rust/: metadata.json
modules/score_baselibs_rust/0.0.1/: MODULE.bazel  source.json
modules/score_bazel_cpp_toolchains/: metadata.json
modules/score_bazel_platforms/: metadata.json
modules/score_bazel_tools_cc/: metadata.json
modules/score_bazel_tools_python/: metadata.json
modules/score_cli_helper/: metadata.json
modules/score_communication/: metadata.json
modules/score_cr_checker/: metadata.json
modules/score_crates/: metadata.json
modules/score_dash_license_checker/: metadata.json
modules/score_docs_as_code/: metadata.json
modules/score_feo/: metadata.json
modules/score_format_checker/: metadata.json
modules/score_itf/: metadata.json
modules/score_kyron/: metadata.json
modules/score_lifecycle_health/: metadata.json
modules/score_linter/: metadata.json
modules/score_logging/: metadata.json
modules/score_nlohmann_json/: metadata.json
modules/score_orchestrator/: metadata.json
modules/score_persistency/: metadata.json
modules/score_platform/: metadata.json
modules/score_process/: metadata.json
modules/score_python_basics/: metadata.json
modules/score_rules_imagefs/: metadata.json
modules/score_rust_policies/: metadata.json
modules/score_scrample/: metadata.json
modules/score_starpls_lsp/: metadata.json
modules/score_test_scenarios/: metadata.json
modules/score_testing_utils/: metadata.json
modules/score_toolchains_gcc/: metadata.json
modules/score_toolchains_qnx/: metadata.json
modules/score_toolchains_rust/: metadata.json
modules/score_tooling/: metadata.json
scripts/: check_and_update_modules.py  generate_module_files.py  modules.json
src/registry_manager/: __init__.py  bazel_wrapper.py  gh_logging.py  github_wrapper.py  main.py  version.py
tests/: conftest.py  test_args.py  test_file_generation.py  test_main.py  test_module_parsing.py  test_module_reading.py  test_noop.py  test_token.py  test_update_planning.py  test_version.py
tools/: BUILD  bcr_tools.BUILD  hello-world.py  requirements.in  requirements.txt  test_verify_semver_compatibility_level.py  verify_modules.py  verify_semver_compatibility_level.py
(+307 files in other folders)
