# This repository is/has a MODULE, simply to enable running python commands.
# Note: Version is not maintained here, as this registry is not intended to be published.
module(
    name = "score_bazel_registry",
    version = "0.0.0",
    compatibility_level = 0,
)

# CopyRight Checker
bazel_dep(name = "score_cr_checker", version = "0.2.0")

# Dash License Checker
bazel_dep(name = "score_dash_license_checker", version = "0.1.1")

# -- Python boilerplate --
PYTHON_VERSION = "3.12"
bazel_dep(name = "rules_python", version = "1.0.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(is_default = True, python_version = PYTHON_VERSION)
use_repo(python)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//tools:requirements.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "score_python_basics", version = "0.3.0")
# -- End of Python boilerplate --

