# This repository is/has a MODULE, simply to enable running python commands.
# Note: Version is not maintained here, as this registry is not intended to be published.
module(
    name = "score_bazel_registry",
    version = "0.0.0",
    compatibility_level = 0,
)

# CopyRight Checker
bazel_dep(name = "score_cr_checker", version = "0.2.0")

# Dash License Checker
bazel_dep(name = "score_dash_license_checker", version = "0.1.1")

# Verification scripts from the Bazel Central Registry
# Note: not using git_repository as we don't want to pull in all dependencies like npm.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "bazel_central_registry",
    # bazel_central_registry does not have any tags or releases,
    # a0a9fab7bdb280770f400b1aeb165dd82db8ffb0 is a random commit mid April 2025.
    url = "https://github.com/bazelbuild/bazel-central-registry/archive/a0a9fab7bdb280770f400b1aeb165dd82db8ffb0.zip",
    sha256 = "ef6b29e511ff082069282a0e14fda78a336e88af98d8a1a50a4f7e1f1e79c4c8",
    strip_prefix = "bazel-central-registry-a0a9fab7bdb280770f400b1aeb165dd82db8ffb0",

    # Inject our own BUILD.bazel file to expose python scripts as py_library.
    # Note: it will be added on root level.
    build_file = "//tools:bcr_tools.BUILD",

    # The existing tools/BUILD file prevents root level BUILD from accessing the tools content.
    # The file is not even evaluated, but it is blocking the visibility of the tools directory.
    patch_cmds = ["rm tools/BUILD"],  # 👈 simple and effective
)


# -- Python boilerplate --
PYTHON_VERSION = "3.12"
bazel_dep(name = "rules_python", version = "1.0.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(is_default = True, python_version = PYTHON_VERSION)
use_repo(python)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//tools:requirements.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "score_python_basics", version = "0.3.0")
# -- End of Python boilerplate --

